fixed error with batch persistence: